## Process this file with automake to produce Makefile.in
##
##<LicenseText>
##
## CitcomS.py by Eh Tan, Eun-seo Choi, and Pururav Thoutireddy.
## Copyright (C) 2002-2005, California Institute of Technology.
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
##
##</LicenseText>

# $Id$

examplesdir = $(pkgdatadir)/examples

nobase_dist_examples_DATA = \
	Cookbook1/cookbook1.cfg \
	Cookbook2/cookbook2.cfg \
	Cookbook3/cookbook3.cfg \
	Cookbook4/cookbook4.cfg \
	Cookbook4/coor.dat \
	Cookbook5/cookbook5.cfg \
	Cookbook5/coor.dat \
	Cookbook5/ic/cookbook5.velo.0.0 \
	Cookbook5/ic/cookbook5.velo.1.0 \
	Cookbook5/velocity/bvel.dat0 \
	Cookbook5/velocity/bvel.dat1 \
	Cookbook5/velocity/bvel.dat10 \
	Cookbook5/velocity/bvel.dat11 \
	Cookbook5/velocity/bvel.dat12 \
	Cookbook5/velocity/bvel.dat13 \
	Cookbook5/velocity/bvel.dat14 \
	Cookbook5/velocity/bvel.dat15 \
	Cookbook5/velocity/bvel.dat16 \
	Cookbook5/velocity/bvel.dat17 \
	Cookbook5/velocity/bvel.dat18 \
	Cookbook5/velocity/bvel.dat19 \
	Cookbook5/velocity/bvel.dat2 \
	Cookbook5/velocity/bvel.dat20 \
	Cookbook5/velocity/bvel.dat21 \
	Cookbook5/velocity/bvel.dat22 \
	Cookbook5/velocity/bvel.dat23 \
	Cookbook5/velocity/bvel.dat24 \
	Cookbook5/velocity/bvel.dat25 \
	Cookbook5/velocity/bvel.dat26 \
	Cookbook5/velocity/bvel.dat27 \
	Cookbook5/velocity/bvel.dat28 \
	Cookbook5/velocity/bvel.dat29 \
	Cookbook5/velocity/bvel.dat3 \
	Cookbook5/velocity/bvel.dat30 \
	Cookbook5/velocity/bvel.dat31 \
	Cookbook5/velocity/bvel.dat32 \
	Cookbook5/velocity/bvel.dat33 \
	Cookbook5/velocity/bvel.dat34 \
	Cookbook5/velocity/bvel.dat35 \
	Cookbook5/velocity/bvel.dat36 \
	Cookbook5/velocity/bvel.dat37 \
	Cookbook5/velocity/bvel.dat38 \
	Cookbook5/velocity/bvel.dat39 \
	Cookbook5/velocity/bvel.dat4 \
	Cookbook5/velocity/bvel.dat40 \
	Cookbook5/velocity/bvel.dat41 \
	Cookbook5/velocity/bvel.dat42 \
	Cookbook5/velocity/bvel.dat43 \
	Cookbook5/velocity/bvel.dat44 \
	Cookbook5/velocity/bvel.dat45 \
	Cookbook5/velocity/bvel.dat46 \
	Cookbook5/velocity/bvel.dat47 \
	Cookbook5/velocity/bvel.dat48 \
	Cookbook5/velocity/bvel.dat49 \
	Cookbook5/velocity/bvel.dat5 \
	Cookbook5/velocity/bvel.dat50 \
	Cookbook5/velocity/bvel.dat51 \
	Cookbook5/velocity/bvel.dat52 \
	Cookbook5/velocity/bvel.dat53 \
	Cookbook5/velocity/bvel.dat54 \
	Cookbook5/velocity/bvel.dat55 \
	Cookbook5/velocity/bvel.dat56 \
	Cookbook5/velocity/bvel.dat6 \
	Cookbook5/velocity/bvel.dat7 \
	Cookbook5/velocity/bvel.dat8 \
	Cookbook5/velocity/bvel.dat9 \
	Cookbook6/cookbook6.cfg \
	Cookbook6/coord.dat \
	Cookbook6/README \
	Cookbook7/cookbook7.cfg \
	Cookbook8/cookbook8.cfg \
	Cookbook8/coord.dat \
	Cookbook8/restart/cookbook8.chkpt.0.9000 \
	Cookbook8/restart/cookbook8.chkpt.1.9000 \
	Cookbook8/restart/cookbook8.chkpt.2.9000 \ 
	Cookbook8/restart/cookbook8.chkpt.3.9000 \
	Cookbook8/restart/cookbook8.chkpt.4.9000 \
	Cookbook8/restart/cookbook8.chkpt.5.9000 \
	Cookbook8/restart/cookbook8.chkpt.6.9000 \
	Cookbook8/restart/cookbook8.chkpt.7.9000 \
	Cookbook8/restart/cookbook8.chkpt.8.9000 \
	Cookbook8/restart/cookbook8.chkpt.9.9000 \
	Cookbook8/restart/cookbook8.chkpt.10.9000 \
	Cookbook8/restart/cookbook8.chkpt.11.9000 \
	example0.cfg \
	example1.cfg \
	Full/input.sample \
	Full/machine.sample \
	Full/velbc/README \
	Full/velbc/velbc_full.tar.gz \
	Regional/input.sample \
	Regional/machines.sample \
	Regional/velbc/README \
	Regional/velbc/velbc_regional.tar.gz

## end of Makefile.am
