## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.1 2005/08/24 22:45:51 leif Exp $

nobase_pkgpython_PYTHON = \
	Components/Advection_diffusion/Advection_diffusion.py \
	Components/Advection_diffusion/__init__.py \
	Components/BC.py \
	Components/CitcomComponent.py \
	Components/Const.py \
	Components/Exchanger/CoarseGridExchanger.py \
	Components/Exchanger/Exchanger.py \
	Components/Exchanger/FineGridExchanger.py \
	Components/Exchanger/__init__.py \
	Components/Exchanger/Inlet.py \
	Components/Exchanger/Outlet.py \
	Components/IC.py \
	Components/__init__.py \
	Components/Launchers.py \
	Components/Param.py \
	Components/Phase.py \
	Components/Sphere/FullSphere.py \
	Components/Sphere/__init__.py \
	Components/Sphere/RegionalSphere.py \
	Components/Sphere/Sphere.py \
	Components/Stokes_solver/Incompressible.py \
	Components/Stokes_solver/__init__.py \
	Components/Tracer.py \
	Components/Visc.py \
	Controller.py \
	CoupledApp.py \
	Coupler.py \
	__init__.py \
	Layout.py \
	SimpleApp.py \
	Solver/FullSolver.py \
	Solver/__init__.py \
	Solver/RegionalSolver.py \
	Solver/Solver.py

## end of Makefile.am
